@@ -1,5 +1,10 @@
 2009-07-15  Pavel Roskin  <proski@gnu.org>
 
+	* include/grub/i386/pc/boot.h (GRUB_BOOT_MACHINE_BPB_END):
+	Increase to 0x5a to accommodate FAT32.  Adjust other offsets
+	accordingly.
+	Original patch by Yves Blusseau <yves.grub-devel@zetam.org>
+
 	* boot/i386/pc/boot.S (general_error_string): Add DOS newline at
 	the end of "Error" to make the message more readable.
 
